crates/lang/tests/ui/contract/fail/trait-message-selector-overlap-2.stderr
error[E0119]: conflicting implementations of trait `ink_lang::reflect::DispatchableMessageInfo<1518209067>` for type `contract::Contract`
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:47:9
   |
42 |         fn message(&self) {}
   |         -------------------- first implementation here
...
47 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `contract::Contract`

error[E0119]: conflicting implementations of trait `ink_lang::codegen::TraitCallForwarderFor<1518209067>` for type `contract::_::CallBuilder`
  --> tests/ui/contract/fail/trait-message-selector-overlap-2.rs:45:5
   |
40 | /     impl TraitDefinition1 for Contract {
41 | |         #[ink(message)]
42 | |         fn message(&self) {}
43 | |     }
   | |_____- first implementation here
44 |
45 | /     impl TraitDefinition2 for Contract {
46 | |         #[ink(message)]
47 | |         fn message(&self) {}
48 | |     }
   | |_____^ conflicting implementation for `contract::_::CallBuilder`
